src/test/resources/syntax_errors/lex_error__illegal_char_in_var_name.notc
void main() {
    int ! = 1;
}
